--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                 <div class="social-media">
                     <ul class="nav-list">
                        <li>
-                           <a href="#" class="icon-link">
+                           <a href="https://www.linkedin.com/in/mankenconde" class="icon-link">
                                <i class="fab fa-linkedin"></i>
                            </a>
                        </li>
                        <li>
-                        <a href="#" class="icon-link">
+                        <a href="https://github.com/mankenconde" class="icon-link">
                             <i class="fab fa-github-square"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="icon-link">
+                        <a href="https://www.instagram.com/manking_c/" class="icon-link">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </li>
