fixed some more issues with responsiveness

--- a/index.html
+++ b/index.html
@@ -213,22 +213,19 @@
     </section>
 
 
-    <!-- <section class="contact" id="contact">
+    <section class="contact" id="contact">
         <div class="container">
             <div class="section-heading">
                 <h1>Contact</h1>
                 <h6>Feel free to contact me about any opportunities</h6>
             </div>
-            <form action="">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name..." required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Enter your Email..." required>
-
-            </form>
+            <div class= "contact-info">
+                <h6><text id="contact-title">Email:</text> manken.conde@outlook.com</h6>
+                <h6><text id="contact-title">Phone: </text>917-690-7360</h6>
+                <h6><text id="contact-title">LinkedIn: </text>linkedin.com/in/mankenconde</h6>
+            </div>
         </div>
-    </section> -->
+    </section>
 
     <footer class="copyright">
         <div class="up" id="up">
